--- a/templates/footer.html
+++ b/templates/footer.html
@@ -43,15 +43,11 @@
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top"><p>© 2025 Company, Inc.
             All rights reserved.</p>
             <ul class="list-unstyled d-flex">
-                <li class="ms-3"><a class="link-body-emphasis" href="#" aria-label="Instagram">
-                    <svg class="bi" width="24" height="24">
-                        <use xlink:href="#instagram"></use>
-                    </svg>
+                <li class="ms-3"><a class="text-white" href="#" aria-label="Instagram">
+                    <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
                 </a></li>
-                <li class="ms-3"><a class="link-body-emphasis" href="#" aria-label="Facebook">
-                    <svg class="bi" width="24" height="24" aria-hidden="true">
-                        <use xlink:href="#facebook"></use>
-                    </svg>
+                <li class="ms-3"><a class="text-white" href="#" aria-label="Facebook">
+                    <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
                 </a></li>
             </ul>
         </div>
